--- a/a2/Makefile
+++ b/a2/Makefile
@@ -10,15 +10,9 @@ all : simpletest
 simpletest : simpletest.o smalloc.o testhelpers.o
 	gcc -Wall -g -o simpletest simpletest.o smalloc.o testhelpers.o
 
-mytest : mytest.o smalloc.o testhelpers.o 
-	gcc -Wall -g -o mytest mytest.o smalloc.o testhelpers.o
-
 
 # The following three rules compile a single .c file into an object file.  
 # We could collape these into one pattern rule.
-
-mytest.o : mytest.c smalloc.h
-	gcc -Wall -g -c mytest.c
 
 simpletest.o : simpletest.c smalloc.h
 	gcc -Wall -g -c simpletest.c
@@ -32,6 +26,18 @@ testhelpers.o : testhelpers.c smalloc.h
 # The clean target is a phony target because there is no file called clean
 # It is a handy rule to remove the executabel and object files. For example,
 # you might run "make clean" before git add and commit.
+
+mytest : mytest.o smalloc.o testhelpers.o 
+	gcc -Wall -g -o mytest mytest.o smalloc.o testhelpers.o
+
+mytest.o : mytest.c smalloc.h
+	gcc -Wall -g -c mytest.c
+
+tests: simpletest mytest
+	./simpletest
+	./mytest
+
+
 
 clean : 
 	rm simpletest *.o
